--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@ img.emoji {
 	padding: 0 !important;
 }
 </style>
-<link rel="stylesheet" id="all-css-0-1" href="index_files/saved_resource" type="text/css" media="all">
-<link rel="stylesheet" id="lodestar_fonts_url-css" href="index_files/css" type="text/css" media="all">
-<link rel="stylesheet" id="all-css-2-1" href="index_files/saved_resource(1)" type="text/css" media="all">
+<link rel="stylesheet" id="all-css-0-1" href="index_files/saved_resource.css" type="text/css" media="all">
+<link rel="stylesheet" id="lodestar_fonts_url-css" href="index_files/css.css" type="text/css" media="all">
+<link rel="stylesheet" id="all-css-2-1" href="index_files/saved_resource(1).css" type="text/css" media="all">
 <link rel="stylesheet" id="print-css-3-1" href="index_files/global-print.css" type="text/css" media="print">
-<link rel="stylesheet" id="all-css-4-1" href="index_files/saved_resource(2)" type="text/css" media="all">
+<link rel="stylesheet" id="all-css-4-1" href="index_files/saved_resource(2).css" type="text/css" media="all">
 <script type="text/javascript" src="index_files/saved_resource(3)"></script>
 <link rel="stylesheet" id="all-css-0-2" href="index_files/style.css" type="text/css" media="all">
 <!--[if lt IE 8]>
